--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,20 @@
 ---
-// Component imports and setup JavaScript go here!
+import supabase from "../utils/initSupabase.js"
+
+import Post from "../components/Post.jsx"
+
+
+
+
+const posts = await supabase.from("blogPosts").select();
+
+const data = posts.data;
+  
+
+
+
+
+
 ---
 
 <html lang="en">
@@ -8,15 +23,15 @@
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 	<meta name="viewport" content="width=device-width" />
-	<title>Welcome to Astro</title>
-	<style>
-		/* scoped CSS styles go here: */
-		/* h1 { ... } */
-	</style>
+	<title>Zach is cool</title>
+	
 </head>
 
 <body>
-	<h1>Welcome to <a href="https://astro.build/">Astro</a></h1>
+
+<Post posts={data} />
+
+
 </body>
 
 </html>
