Hey I got Tailwind to work!

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -23,7 +23,7 @@ const {post} = Astro.props;
 
 ---
 <head>
-
+<link rel="stylesheet" href={Astro.resolve("../../assets/style/global.css")} >
 	
 	<title>{post.title}</title>
 
